# ChangeLog for app-office/koffice-meta
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/ChangeLog,v 1.87 2009/08/12 10:14:01 scarabeus Exp $

  12 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -koffice-meta-2.0.0.ebuild, -koffice-meta-2.0.1.ebuild:
  Cleanup.

*koffice-meta-2.0.2 (12 Aug 2009)

  12 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +koffice-meta-2.0.2.ebuild:
  Version bump to 2.0.2.

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  koffice-meta-1.6.3_p20090204.ebuild:
  alpha/ia64/sparc stable wrt #276008

  19 Jul 2009; nixnut <nixnut@gentoo.org>
  koffice-meta-1.6.3_p20090204.ebuild:
  ppc stable #276008

  03 Jul 2009; Jeroen Roovers <jer@gentoo.org>
  koffice-meta-1.6.3_p20090204.ebuild:
  Stable for HPPA (bug #276008).

  02 Jul 2009; Markus Meier <maekke@gentoo.org>
  koffice-meta-1.6.3_p20090204.ebuild:
  amd64 stable, bug #276008

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  koffice-meta-1.6.3_p20090204.ebuild:
  stable x86, bug 276008

  30 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -koffice-meta-1.6.1.ebuild, koffice-meta-1.6.3.ebuild,
  koffice-meta-1.6.3_p20090204.ebuild:
  Slotmove to 3.5, remove old

*koffice-meta-2.0.1 (25 Jun 2009)

  25 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +koffice-meta-2.0.1.ebuild:
  Version bump to 2.0.1

*koffice-meta-2.0.0 (28 May 2009)

  28 May 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -koffice-meta-1.9.99.0.ebuild, +koffice-meta-2.0.0.ebuild:
  Version bump for final koffice 2 series first release.

*koffice-meta-1.9.99.0 (30 Apr 2009)

  30 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org>
  +koffice-meta-1.9.99.0.ebuild:
  Version bump for koffice-2.

*koffice-meta-1.6.3_p20090204 (08 Feb 2009)

  08 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
  +koffice-meta-1.6.3_p20090204.ebuild:
  Sync to branch plus various fixes.
