@@ -1,4 +1,3 @@
-EBUILD koffice-meta-1.6.3.ebuild 1226 RMD160 6ed79d6256a41d1ec29af061ef74fcd8376127e5 SHA1 f511295a22bc83273356685db544e2cecc86babf SHA256 1c91eeeda78c740080ea44b642a4938fa601bb16ae72eb0e8f112da8b00f8f84
-EBUILD koffice-meta-1.6.3_p20090204.ebuild 1025 RMD160 afda2392b82be10ae6be77a1b2572a9f4606e92f SHA1 72505428122a7e65a58654d8640274a3b12361b0 SHA256 608a2908723bf6637f23e5d59956b9652a9346528598eb0611fe75baa31af000
-MISC ChangeLog 10852 RMD160 9eff451ecc618b12605679aa58e1c59f8664a9d4 SHA1 41595d5047e70f0c22f53242bde30886c405479f SHA256 42131f99f0ab481677ea12322c2dba94896a28e6259e459dc4a4d67e987f7e00
+EBUILD koffice-meta-1.6.3_p20090204.ebuild 1023 RMD160 5e6b822f0fdf1ba9e9a2f8abc6ac28b65ad5479d SHA1 83f19506b320c9e3b9b28099b43721d090489830 SHA256 d2c28e1bd790432769f55c5588cbe24c969b3e4016fa0e46790b2450fc1bf582
+MISC ChangeLog 11098 RMD160 75183e18d5a736c56fd2dccc1cd04afa87bf918b SHA1 a828899c93dec4f7a21f462a00f23abed3b021fb SHA256 50e8e9345611bf48c31cdbae3c03fb3bb798fbb65944d449fd224d29b55a4dca
 MISC metadata.xml 157 RMD160 9258d9691830e58ee00ca89f0a6df9ce077f2439 SHA1 b2ca0d856f38a09bf6d2e58ee77b344552585862 SHA256 e0e268ca18fef286617fcfe97773d5df5b8fbdb5fbcb9a29adc5e8b0baea4292
