@@ -1,6 +1,13 @@
 # ChangeLog for app-office/koffice-meta
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/ChangeLog,v 1.87 2009/08/12 10:14:01 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/ChangeLog,v 1.89 2009/11/01 09:10:32 abcd Exp $
+
+  01 Nov 2009; Jonathan Callen <abcd@gentoo.org> -koffice-meta-1.6.3.ebuild:
+  Drop old version
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org>
+  koffice-meta-1.6.3_p20090204.ebuild:
+  Marking koffice-meta-1.6.3_p20090204 ppc64 stable for bug 276008
 
   12 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
   -koffice-meta-2.0.0.ebuild, -koffice-meta-2.0.1.ebuild:
